--- a/index.html
+++ b/index.html
@@ -1,39 +1,53 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Ahmed Abdrabou| Students_Data</title>
-    <!-- style links -->
-    <link rel="stylesheet" href="css/style.css">
-    <!-- bootstrap link -->
-    <link rel="stylesheet" href="bootstrap-5.2.0-beta1-dist\css\bootstrap.css">
-    <!-- js link -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-  </head>
-  <body class="text-center">
-    <section class="main-section">
-      <div class="modal-content rounded-4 shadow">
-            <!-- <div class="modal-header border-bottom-0">
+
+<head>
+  <meta charset="utf-8">
+  <title>Ahmed Abdrabou| Students_Data</title>
+  <!-- style links -->
+  <link rel="stylesheet" href="css/style.css">
+  <!-- bootstrap link -->
+  <link rel="stylesheet" href="bootstrap-5.2.0-beta1-dist\css\bootstrap.css">
+  <!-- js link -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+</head>
+
+<body class="text-center">
+  <section class="main-section">
+    <img class="dad" src="images\wings.png" alt="" style="width:300px;">
+    <div class="main-nav1">
+      <h2>D_Sparrow</h2>
+
+      <h1>Ahmed Abdrabou</h1>
+
+      <div class="links-cont">
+
+      </div>
+
+    </div>
+
+    <div class="modal-content rounded-4 shadow">
+      <!-- <div class="modal-header border-bottom-0">
               <h5 class="modal-title">Modal title</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body py-0">
               <p>This is a modal sheet, a variation of the modal that docs itself to the bottom of the viewport like the newer share sheets in iOS.</p>
             </div> -->
-            <div class="modal-footer flex-column border-top-0">
-              <button type="button" class="btn btn-lg btn-primary w-100 mx-0 mb-2">General Medicine</button>
-              <button type="button" class="btn btn-lg btn-primary w-100 mx-0 mb-2">Dentests</button>
-              <button type="button" class="btn btn-lg btn-primary w-100 mx-0 mb-2">Pharmacy</button>
-              <button type="button" class="btn btn-lg btn-primary w-100 mx-0 mb-2">Engnering</button>
-              <button type="button" class="btn btn-lg btn-light w-100 mx-0" data-bs-dismiss="modal">Join us in telegram</button>
-            </div>
-          </div>
-    </section>
+      <div class="modal-footer flex-column border-top-0">
+        <button type="button" class="btn btn-lg btn-primary w-100 mx-0 mb-2"><a href="medical.html">General Medicine</a> </button>
+        <button type="button" class="btn btn-lg btn-primary w-100 mx-0 mb-2"> <a href="#">Dentests</a> </button>
+        <button type="button" class="btn btn-lg btn-primary w-100 mx-0 mb-2"><a href="#">Pharmacy</a> </button>
+        <button type="button" class="btn btn-lg btn-primary w-100 mx-0 mb-2"><a href="#">Engnering</a> </button>
+        <button type="button" class="btn btn-lg btn-light w-100 mx-0" data-bs-dismiss="modal"><a class="dedo" href="#">Join us in telegram</a> </button>
+      </div>
+    </div>
+  </section>
+  <footer id="fot">
+    <h5>Made With Love By D-Sparrow All Right Reserved </h5>
+  </footer>
 
-    <footer id="fot">
-      <h5>Created With love By D_Sparrow All data reservied</h5>
-    </footer>
+</body>
 
-  </body>
 </html>
